fix router annotations + regenerate swagger docs
